# comp371

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Skybox.cpp  Skybox.hpp  Windmill.cpp  Windmill.hpp  comp371.cpp  main.cpp
shaders/: SimpleColor.frag  SimpleColor.vert
